<resources>
    <string name="app_name">ShakeToDo</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
    <string name="add_button_text">Add</string>
    <string name="pic_button_text">Take Picture</string>
    <string name="creation_date">Date created: </string>
    <string name="due_date">Date due: </string>
    <string name="delete">Delete</string>
    <string name="select_a_priority">Select a priority:</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>
    <string name="take_picture_button">Take a picture</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="update_pic_button_text">Update Picture</string>
    <string name="update_button_text">Update</string>
    <string name="name_of_the_todo">Name of the ToDo</string>
    <string name="completed">Completed</string>
    <string name="image">Image</string>
    <string name="update">Update</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>