<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/custom_yellow"
    android:padding="16dp">

    <TextView
        android:id="@+id/todo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/name_of_the_todo"
        android:textAlignment="center"
        android:textColor="@color/custom_blue"
        />

    <TextView
        android:id="@+id/todo_createdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/creation_date"
        android:layout_marginTop="30sp"
        android:textColor="@color/custom_blue"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/todo_duedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/due_date"
        android:layout_marginTop="20sp"
        android:textColor="@color/custom_blue"
        android:layout_gravity="center"
        android:gravity="center" />

    <CheckBox
        android:id="@+id/todo_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:textColor="@color/custom_blue"
        android:enabled="false"
        android:foregroundTint="@color/custom_blue"/>

    <RatingBar
        android:id="@+id/todo_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:isIndicator="true"
        android:progressTint="@color/custom_blue"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:adjustViewBounds="true"
        android:layout_marginTop="50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/delete"
            android:onClick="onDeleteButtonClick"
            android:layout_above="@id/update_button"
            android:backgroundTint="@color/custom_blue"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/update"
            android:onClick="onUpdateButtonClick"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/custom_blue"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</LinearLayout>