<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/custom_yellow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/custom_blue"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/notes_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text"
            android:backgroundTint="@color/custom_blue"
            android:textColor="@color/black"/>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_edit_text"
            android:backgroundTint="@color/custom_blue"
            android:calendarTextColor="@color/custom_blue"
            android:foregroundTint="@color/custom_blue"
            android:foregroundTintMode="add"/>

        <LinearLayout
            android:id="@+id/priority_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_picker"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_priority"
                android:backgroundTint="@color/custom_blue"
                android:foregroundTint="@color/custom_blue"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:foregroundTint="@color/custom_blue"
                android:backgroundTint="@color/custom_blue"
                android:textAlignment="viewEnd"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="end|bottom"
                android:text="@string/udpate_button_text"
                android:onClick="onUpdateButtonClick"
                android:backgroundTint="@color/custom_blue"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"/>

            <Button
                android:id="@+id/update_pic_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/update_pic_button_text"
                android:layout_above="@id/update_button"
                android:backgroundTint="@color/custom_blue"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
